# mcp-agentty

./: .gitignore  Dockerfile  README.md  pyproject.toml
mcp_agentty/: __init__.py  server.py  session.py
tests/: test_agentty.py
